syntax = "proto3";

package pb;

option go_package = "github.com/nhan-ngo-usf/NBank/pb";

message VerifyEmailRequest {
    int64 email_id = 1;
    string verify_code = 2;
}

message VerifyEmailResponse {
    bool is_verified = 1;
}